Frontend Mentor  | Chat App CSS Illustration Desktop

--- a/dev/views/index.pug
+++ b/dev/views/index.pug
@@ -45,5 +45,6 @@ html(lang="en")
                         input(type="text" placeholder="Type a message...") 
                         button(type="submit") 
                             i.fas.fa-chevron-right
-            h1.title Simple Booking
-            p.paragraph Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make bookings. Once the walk has been completed you can rate your walker and book again all through the chat. 
+            section.description
+                h1.title Simple booking
+                p.paragraph Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make bookings. Once the walk has been completed you can rate your walker and book again all through the chat. 
