--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -13,14 +13,16 @@ body {
   position: relative;
   padding: 0;
   margin: 0;
-  background-color:hsl(0, 0%, 98%);
+  background-color: hsl(0, 0%, 98%);
   width: 100vw;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   //overflow: hidden;
   &::before,
   &::after {
-   
     content: "";
     position: absolute;
     z-index: -1;
@@ -47,19 +49,64 @@ main {
   overflow: hidden;
   padding-left: 36px;
   padding-right: 36px;
-  .title,.paragraph{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  .title,
+  .paragraph {
     text-align: center;
-
   }
-  .title{
+  .title {
     font-size: 2.45rem;
     font-weight: 500;
     color: $veryDarkDesaturatedViolet;
     margin-top: 60px;
   }
-  .paragraph{
+  .paragraph {
     color: $darkGrayishViolet;
     font-weight: 400;
     line-height: 1.75rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  body {
+    overflow: hidden;
+    &::before,
+    &::after {
+      height: 155vh;
+    }
+    &::before{
+      width: 35vw;
+      border-radius: 380px;
+      left: -8%;
+      top: -65%;
+    }
+    &::after{
+      width: 25vw;
+     height: 80vh ;
+     bottom: 0;
+     border-top-left-radius: 350px;
+    }
+  }
+  main {
+    flex-direction: row;
+    width: 860px;
+    align-items: center;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 0;
+    margin-left: 3rem;
+    .title,
+    .paragraph {
+      text-align: left;
+      width: 450px;
+      line-height: 1.5rem;
+    }
+  }
+  .description {
+    margin-left: 100px;
   }
 }
