Frontend Mentor  | Chat App CSS Illustration Desktop

--- a/dev/scss/blocks/_mobile.scss
+++ b/dev/scss/blocks/_mobile.scss
@@ -2,7 +2,7 @@
 .mobile {
   background-color: $White;
   width: 250px;
-  height: 505px;
+  min-height: 505px;
   border-radius: 28px;
   margin-left: auto;
   margin-right: auto;
