--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -20,7 +20,7 @@ body {
   align-items: center;
   justify-content: center;
 
-  //overflow: hidden;
+  overflow: hidden;
   &::before,
   &::after {
     content: "";
