--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 body::before, body::after {
   content: "";
@@ -133,7 +134,7 @@ main .paragraph {
 .mobile {
   background-color: white;
   width: 250px;
-  height: 505px;
+  min-height: 505px;
   border-radius: 28px;
   margin-left: auto;
   margin-right: auto;
