--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -15,12 +15,12 @@ body {
   margin: 0;
   background-color: hsl(0, 0%, 98%);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  overflow: hidden;
+  //overflow: hidden;
   &::before,
   &::after {
     content: "";
@@ -46,7 +46,7 @@ body {
 main {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  //overflow: hidden;
   padding-left: 36px;
   padding-right: 36px;
   display: flex;
