--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -15,11 +15,10 @@ body {
   margin: 0;
   background-color: #fafafa;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 body::before, body::after {
   content: "";
@@ -44,7 +43,6 @@ body::after {
 main {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   padding-left: 36px;
   padding-right: 36px;
   display: flex;
