--- a/dev/scss/blocks/_mobile.scss
+++ b/dev/scss/blocks/_mobile.scss
@@ -29,7 +29,7 @@
   &__background {
     background-color: $LightGrayishViolet;
     width: calc(100% - 5px);
-    height: calc(100% - 4px);
+    height: 500px;//calc(100% - 4px);
     top: 0;
     right: 0;
     bottom: 0;
@@ -138,7 +138,7 @@
       width: 95%;
       height: 2rem;
       margin: auto;
-     margin-top: 25px;
+     margin-top: 35px;
 
       background-color: $White;
       border-radius:30px;
@@ -168,5 +168,6 @@
 @media screen and (min-width:1280px){
     .mobile{
         min-width: 250px;
+        min-height: 505px;
     }
 }
